# Plum

./: .gitignore  BUILD_AGENT.sh  Makefile  README.md  README_local.md  create-deploy-package.sh  docker-compose.agent.yml  docker-compose.controller-test-simple.yml  docker-compose.main.yml  docker-compose.offline.yml  docker-compose.production-bind.yml  docker-compose.production.yml  docker-compose.yml  export-docker-images.sh  import-docker-images.sh  push_docker_image.sh
.devin/: wiki.json
agent/: CMakeLists.txt
agent-go/: .env  CHANGELOG.md  README.md  app_manager.go  docker_manager.go  env.example  go.mod  go.sum  logger.go  main.go  models.go  process_manager.go  reconciler.go  utils.go
agent/src/: fs_utils.cpp  fs_utils.hpp  http_client.cpp  http_client.hpp  main.cpp  reconciler.cpp  reconciler.hpp
controller/: .env  Makefile  env.example  go.mod  go.sum
deploy/: PRODUCTION_DEPLOYMENT.md
deploy/systemd/: README.md  plum-agent@.service  plum-controller.service
docker/: CONTROLLER-IP-GUIDE.md  DEPLOYMENT-GUIDE.md  IMAGE_TAGS_GUIDE.md  QUICK-START.md  README-DEPLOYMENT.md  README-controller-test.md  README.md  README_DOCKER_SCRIPTS.md  TROUBLESHOOTING-GUIDE.md  USAGE-EXAMPLES.md  build-docker.sh  build-scratch-images.sh  build-static-offline-fixed.sh  build-static-offline.sh  copy-libs.sh  copy-qt5-libs.sh  debug-copy-libs.sh  debug-simple.sh  deploy.sh  download-openeuler-arm64.sh  generate-offline-images.sh  load-offline-images.sh  prepare-alpine-with-packages.sh  start-agent.sh  start-controller.sh  stop-agent.sh  stop-controller.sh
docker/agent/: Dockerfile
docker/archive_unused/: README.md  smart-copy-libs.sh
docker/controller/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf  nginx.conf.host
docs/: AGENT_COMMANDS.md  AGENT_GO_MIGRATION.md  CONTAINER_APP_MANAGEMENT.md  CONTAINER_ARCHITECTURE.md  DEPLOYMENT_STATUS.md  DISTRIBUTED_KV.md  ENV_CONFIG.md  FSL_TASK_DESIGN.md  FSL_TASK_FLOW.md  INDEX.md  NGINX_DEPLOYMENT.md  OFFLINE_APP_BASE_IMAGES.md  OFFLINE_OPENEULER_IMAGE.md  PERFORMANCE_TEST.md  PLUMCLIENT_SUMMARY.md  PROJECT_SUMMARY.md  PROTO_GUIDE.md  QT_APP_IN_CONTAINER.md  QUICK_REFERENCE.md  QUICK_START_MODE3.md  SDK_AND_PERFORMANCE.md  SESSION_HANDOFF.md  TEST_CONTAINER_MODE.md  TEST_FULLY_CONTAINERIZED.md  WEAK_NETWORK_SUPPORT.md
docs/assistant/: POSTCARD.md
examples-local/: BUILD.md  Dockerfile.local.template  Dockerfile.python.template  Dockerfile.python.template.ubuntu  PYTHON_IMAGE_SETUP.md  PYTHON_OFFLINE_PACKAGES.md  README_DOCKER.md  README_DOCKER_PYTHON.md  build-docker-local.sh  build-docker-python.sh  copy-deps-python.sh  copy-deps.sh
examples-local/FSL_Common/: simulation_utils.hpp
examples-local/FSL_Destroy/: FSL_Destroy.pro  main.cpp
examples-local/FSL_Evaluate/: main.cpp
examples-local/FSL_Investigate/: main.cpp
examples-local/FSL_MainControl/: app.py  download_dependencies.sh  install_dependencies.sh  requirements.txt
examples-local/FSL_Plan/: main.cpp
examples-local/FSL_Statistics/: FSL_Statistics.pro  main.cpp
examples-local/FSL_Sweep/: .dockerignore  Dockerfile  Dockerfile.local  FSL_Sweep.pro  README_DOCKER.md  build-docker-local.sh  build-docker.sh  copy-deps.sh  main.cpp
examples-local/Hello/: main.cpp
examples-local/SimDecision/: INSTALL_OFFLINE.md  README.md  app.py  download_dependencies.sh
examples-local/SimNaviControl/: SimNaviControl.pro  meta.ini
examples-local/SimRoutePlan/: SimRoutePlan.pro  main.cpp
examples-local/SimSonar/: SimSonar.pro  meta.ini
examples-local/SimTargetHit/: SimTargetHit.pro
examples-local/SimTargetRecognize/: SimTargetRecognize.pro
examples-local/Sim_Decision/: download_dependencies.sh  install_dependencies.sh  meta.ini
examples-local/Sim_NaviControl/: main.cpp
examples-local/Sim_Sonar/: main.cpp
examples-local/Sim_TargetHit/: main.cpp
examples-local/Sim_TargetRecognize/: main.cpp
examples/kv-demo/: CMakeLists.txt  README.md  build.sh  main.cpp  meta.ini  start.sh
examples/worker-demo/: CMakeLists.txt  README.md  build.sh  main.cpp  meta.ini  start.sh
offline-images/: images.txt
plum-offline-deploy/: README.md
proto/: Makefile  README.md  fsl_task.proto  task_service.proto
scripts/: test-performance.sh
sdk/cpp/: CMakeLists.txt  NETWORK_SETUP.md  env_loader.hpp
sdk/cpp/build_test/: Makefile
sdk/cpp/build_test/examples/echo_worker/: Makefile
sdk/cpp/build_test/examples/grpc_echo_worker/: Makefile
sdk/cpp/build_test/examples/radar_sensor/: Makefile
sdk/cpp/build_test/plumkv/: Makefile
sdk/cpp/build_test/plumresource/: Makefile
sdk/cpp/build_test/plumworker/: Makefile
sdk/cpp/examples/echo_worker/: CMakeLists.txt  main.cpp
sdk/cpp/examples/grpc_echo_worker/: CMakeLists.txt  main.cpp
sdk/cpp/examples/radar_sensor/: CMakeLists.txt  main.cpp
sdk/cpp/examples/service_client_example/: CMakeLists.txt  main.cpp
sdk/cpp/plumclient/: CMakeLists.txt  build.sh
sdk/cpp/plumclient-libcurl-backup/: CMakeLists.txt  README.md
sdk/cpp/plumclient-libcurl-backup/src/: cache.cpp  discovery_client.cpp  plum_client.cpp
sdk/cpp/plumclient/include/: plum_client.hpp
sdk/cpp/plumclient/src/: service_client.cpp  weak_network_support.cpp
sdk/cpp/plumkv/: CMakeLists.txt  DistributedMemory.cpp  DistributedMemory.hpp  README.md  env.example  env_loader.hpp
sdk/cpp/plumresource/: CMakeLists.txt  env.example
sdk/cpp/plumresource/include/: plum_resource.hpp
sdk/cpp/plumresource/src/: plum_resource.cpp
sdk/cpp/plumworker/: CMakeLists.txt  README_STREAM_WORKER.md
sdk/cpp/plumworker/include/: grpc_worker.hpp  plum_worker.hpp  weak_network_support.hpp
sdk/cpp/plumworker/include/plumworker/: stream_worker.hpp
sdk/cpp/plumworker/src/: grpc_worker.cpp  plum_worker.cpp  stream_worker.cpp  weak_network_support.cpp
sdk/go/: README.md  (+5 more)
tools/: CMakeLists.txt  cpp_weak_network_test.cpp  go.mod  make_sync_packet.sh  performance.go  pkg_app.sh  run_cpp_weak_network_test.sh  run_performance_test.sh  run_weak_network_test.sh  stop_agent.sh  weak_network.go
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+135 files in other folders)
